finish hashtags
